--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -44,7 +44,7 @@
     ]
   },
   "proxy": "https://edvoracompanypokemonapp.herokuapp.com",
-  "homepage": "https://AbdelrahmanElkhradely.github.io/pokemon-project"
+  "homepage": "https://pokemon-project-eta.vercel.app/"
 
 
 }
